# template_cmake_vscode

./: CMakeLists.txt
include/: MyClass.hpp
src/: MyClass.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: MyTest.cpp
